<resources>
    <!-- App information -->
    <string name="app_name">Weather App</string>
    <string name="app_version">1.0</string>

    <!-- Info for weather -->
    <string name="weather_url">https://api.openweathermap.org/data/2.5/weather</string>
    <string name="weather_key">insert your key here</string>

    <!-- Update menu item -->
    <string name="action_advice">Advice</string>
    <!-- Archive menu item -->
    <string name="action_archive">Archive</string>
    <!-- Info menu item -->
    <string name="action_info">Info</string>
    <!-- Logout menu item -->
    <string name="action_logout">Log Out</string>
    <!-- Search menu item -->
    <string name="search_city">Search City</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_token_fmt"></string>


</resources>