<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:showAsAction="always">

    <item
        android:id="@+id/action_advice"
        android:icon="@drawable/ic_update"
        android:title="@string/action_advice" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_location_searching"
        android:title="@string/search_city"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
        android:id="@+id/archive"
        android:icon="@drawable/ic_archive"
        android:title="@string/action_archive" />

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_info"
        android:title="@string/action_info" />

    <item android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/action_logout" />


</menu>